# artifact-protocol

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  install.sh  justfile  sr.yaml
.github/workflows/: ci.yml
benches/: aap.rs  protocol_fixture.html  results.md  watcher.rs
evals/: BENCHMARKS_APPLY_ENGINE.md  README.md  pyproject.toml
evals/data/: aap-spec.md
evals/data/apply-engine/0001/: meta.json  metadata.yml  prompt.md
evals/data/apply-engine/0002/: meta.json
evals/data/apply-engine/0003/: meta.json
evals/src/aap_evals/: agents.py  apply.py  cli.py  envelopes.py  markers.py  schema.py
skills/aap/: SKILL.md
skills/generate-artifact/: SKILL.md
spec/: aap-sse.md  aap.md
spec/examples/: chunked-stream.jsonl  composite.json  edit-delegation.json  full-generation.json  incremental-diff.json  json-pointer-diff.json  parallel-manifest.json  section-update.json  template-fill.json
spec/schemas/: artifact-envelope.json  chunk-frame.json  diff-operation.json  entity-metadata.json  relationship.json  rendering-hints.json  sse-error.json  template-binding.json
src/: aap.rs  apply.rs  ffi.rs  lib.rs  main.rs  markers.rs  store.rs  telemetry.rs
tools/: pyproject.toml
tools/src/aap/: __init__.py  corpus.py  orchestrator.py  strategies.py
tools/src/aap/assets/: __init__.py  dashboard.html
tools/src/aap/benchmarks/: aap_bench.py  hf_stream.py  run.py
tools/src/aap/scripts/: aap_demo.py  demo.py  ollama_stream.py  parallel_demo.py  realtime.py  stream.py
tools/src/artifact_generator/: aap.py  orchestrator.py  strategies.py
tools/src/artifact_generator/benchmarks/: aap_bench.py
tools/src/artifact_generator/scripts/: aap_demo.py  parallel_demo.py
(+166 files in other folders)
