[project]
name = "aap"
version = "0.1.0"
description = "Benchmark and validation scripts for the Agent-Artifact Protocol (AAP)"
requires-python = ">=3.11"
dependencies = [
    "ollama>=0.6.1",
    "tiktoken>=0.7",
    "tokenizers>=0.21",
]

[project.scripts]
ag-demo = "aap.scripts.demo:main"
ag-ollama = "aap.scripts.ollama_stream:main"
ag-stream = "aap.scripts.stream:main"
ag-bench = "aap.benchmarks.run:main"
ag-hf-stream = "aap.benchmarks.hf_stream:main"
ag-realtime = "aap.scripts.realtime:main"
ag-aap-bench = "aap.benchmarks.aap_bench:main"
ag-aap-demo = "aap.scripts.aap_demo:main"
ag-parallel-demo = "aap.scripts.parallel_demo:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
